--- a/src/Components/Users/AddUser.module.css
+++ b/src/Components/Users/AddUser.module.css
@@ -1,8 +1,10 @@
 .input{
-  margin: 2rem;
+  margin: 2rem auto;
   padding: 1rem;
   width: 90%;
   max-width: 40rem;
+
+  
 }
 .input label{
   display: block;
