--- a/src/Components/counter/Counter.module.css
+++ b/src/Components/counter/Counter.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   width: 90%;
   padding: 5px;
-  margin: 2rem;
+  margin: 2rem auto;
+  max-width: 40rem;
 }
 .count label{
   margin: 5px;
